# ovn-octavia-provider

./: .coveragerc  .gitignore  .gitreview  .pre-commit-config.yaml  .pylintrc  .stestr.conf  CONTRIBUTING.rst  HACKING.rst  README.rst  bindep.txt  lower-constraints.txt  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
devstack/: local.conf.sample  plugin.sh  settings
doc/: requirements.txt
doc/source/: conf.py  index.rst  pdf-index.rst
doc/source/admin/: driver.rst  index.rst
doc/source/configuration/: config.rst  index.rst
doc/source/contributor/: index.rst  loadbalancer.rst
etc/oslo-config-generator/: ovn.conf
ovn_octavia_provider/: agent.py  driver.py  event.py  helper.py  maintenance.py
ovn_octavia_provider/cmd/: octavia_ovn_db_sync_util.py
ovn_octavia_provider/common/: clients.py  config.py  constants.py  exceptions.py  utils.py
ovn_octavia_provider/hacking/: checks.py
ovn_octavia_provider/ovsdb/: impl_idl_ovn.py  ovsdb_monitor.py
ovn_octavia_provider/tests/functional/: base.py  requirements.txt  test_agent.py  test_driver.py  test_integration.py
ovn_octavia_provider/tests/unit/: base.py  fakes.py  test_agent.py  test_cmd.py  test_driver.py  test_hacking.py  test_helper.py  test_maintenance.py
ovn_octavia_provider/tests/unit/common/: test_clients.py  test_utils.py
ovn_octavia_provider/tests/unit/hacking/: test_checks.py
ovn_octavia_provider/tests/unit/ovsdb/: test_impl_idl_ovn.py  test_ovsdb_monitor.py
releasenotes/notes/: add-hm-support-2c6729d8816125a5.yaml  add-neutron-client-interface-info-6a018cad49b5d240.yaml  add-sctp-support-bedfed905e1f5a58.yaml  adjust-and-deprecate-neutron-config-options-50edf01318758917.yaml  lb_enable_disable-afdfe8f08dad533c.yaml  lbhc-fix-fip-05820d5a9d94a919.yaml  maintenance-task-bugfix-2072754-cc20f614de657747.yaml  maintenance-task-framework-a366242c89f5af11.yaml  new-device-owner-627ee59b95b670b4.yaml  new-repository-for-ovn-octavia-provider-driver-dd81c4414c529c4e.yaml  session-persistence-b409428a8907f542.yaml
releasenotes/source/: README.rst  conf.py  index.rst
roles/configure_functional_tests/defaults/: main.yaml
roles/configure_functional_tests/tasks/: main.yaml
tools/: check_unit_test_structure.sh  coding-checks.sh
zuul.d/: base.yaml  project.yaml
