[metadata]
name = ovn-octavia-provider
summary = OpenStack Octavia integration with OVN
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.openstack.org/ovn-octavia-provider/latest/
python-requires = >=3.6
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[files]
packages =
    ovn_octavia_provider

[global]
setup-hooks =
    pbr.hooks.setup_hook


[entry_points]
octavia.api.drivers =
    ovn = ovn_octavia_provider.driver:OvnProviderDriver

oslo.config.opts =
    octavia.api.drivers.ovn = ovn_octavia_provider.common.config:list_opts
