[metadata]
name = ovn-octavia-provider
summary = OpenStack Octavia integration with OVN
description_file =
    README.rst
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
home_page = https://docs.openstack.org/ovn-octavia-provider/latest/
python_requires = >=3.8
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[files]
packages =
    ovn_octavia_provider

[global]
setup_hooks =
    pbr.hooks.setup_hook

[entry_points]
octavia.api.drivers =
    ovn = ovn_octavia_provider.driver:OvnProviderDriver

octavia.driver_agent.provider_agents =
    ovn = ovn_octavia_provider.agent:OvnProviderAgent

oslo.config.opts =
    octavia.api.drivers.ovn = ovn_octavia_provider.common.config:list_opts
